--- a/notebooks/20190729_CI_IOU_v3.ipynb
+++ b/notebooks/20190729_CI_IOU_v3.ipynb
@@ -13,7 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def iou_courtney(gt, pred):\n",
+    "import sys\n",
+    "import os\n",
+    "project_dir = os.path.dirname(os.getcwd())\n",
+    "sys.path.append(project_dir) #notebooks can't look into source unless you append the parent project directory to the path\n",
+    "print(project_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_iou(gt, pred):\n",
     "    gt_bool = np.array(gt, dtype=bool)\n",
     "    pred_bool = np.array(pred, dtype=bool)\n",
     "\n",
@@ -31,21 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "project_dir = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(project_dir) #notebooks can't look into source unless you append the parent project directory to the path\n",
-    "print(project_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import datetime\n",
     "import matplotlib.pyplot as plt \n",
     "from scipy.misc import imresize\n",
     "import skimage"
@@ -128,6 +129,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "table_filenames_filtered_100 = table_filenames_filtered_100[table_filenames_filtered_100.view_exists == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(table_filenames_filtered_100.instanceidk.nunique())\n",
     "print(table_filenames_filtered_100.shape)\n",
     "table_filenames_filtered_100.head()"
@@ -139,62 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_filenames_filtered_100_melt = pd.melt(table_filenames_filtered_100, id_vars=['instanceidk', 'indexinmglist', 'chordsequence', 'chordtype'\n",
-    "                                                                                   , 'x1coordinate', 'y1coordinate', 'chordlength', 'x2coordinate'\n",
-    "                                                                                   , 'y2coordinate', 'interchorddistance', 'studyidk', 'frame'\n",
-    "                                                                                   , 'sopinstanceuid', 'instancefilename']\n",
-    "                                            , value_vars=['a4c_ven_ed', 'a4c_ven_es', 'a2c_ven_ed', 'a2c_ven_es', 'a4c_atr_es', 'a2c_atr_es']\n",
-    "                                            , var_name='view_name', value_name='view_exists')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_filenames_filtered_100_melt = table_filenames_filtered_100_melt[table_filenames_filtered_100_melt.view_exists == True]\n",
-    "print(table_filenames_filtered_100_melt.shape)\n",
-    "print(table_filenames_filtered_100_melt.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop chord sequence and remove duplicates\n",
-    "table_filenames_filtered_100_melt = table_filenames_filtered_100_melt.drop(['chordsequence', 'chordtype', 'x1coordinate', 'y1coordinate'\n",
-    "                                        , 'chordlength', 'x2coordinate', 'y2coordinate', 'interchorddistance'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_filenames_filtered_100_melt = table_filenames_filtered_100_melt.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(table_filenames_filtered_100_melt.shape)\n",
-    "table_filenames_filtered_100_melt.view_name.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_filenames_filtered_100_melt.head()"
+    "print(table_filenames_filtered_100.shape)\n",
+    "table_filenames_filtered_100.view_name.value_counts()"
    ]
   },
   {
@@ -205,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "table_filenames_filtered_100_melt['instanceidk'].count()"
+    "table_filenames_filtered_100['instanceidk'].count()"
    ]
   },
   {
@@ -218,17 +174,16 @@
     "# gt file (think about convention)\n",
     "# match to pred file frame chamber\n",
     "\n",
-    "table_filenames_filtered_100_melt['iou_score'] = ''\n",
+    "table_filenames_filtered_100['iou_score'] = ''\n",
     "\n",
-    "for i in table_filenames_filtered_100_melt.index:\n",
+    "for i in table_filenames_filtered_100.index:\n",
     "    #ground truth\n",
-    "    fileno = str(table_filenames_filtered_100_melt.at[i, 'instancefilename'])\n",
-    "    frame = table_filenames_filtered_100_melt.at[i, 'frame']\n",
-    "    view_chamber_string_list = table_filenames_filtered_100_melt.at[i, 'view_name'].split(\"_\")\n",
-    "    view = view_chamber_string_list[0]\n",
-    "    chamber = view_chamber_string_list[1]\n",
-    "    instance = table_filenames_filtered_100_melt.at[i, 'instanceidk']\n",
-    "    study = table_filenames_filtered_100_melt.at[i, 'studyidk']\n",
+    "    fileno = str(table_filenames_filtered_100.at[i, 'instancefilename'])\n",
+    "    frame = table_filenames_filtered_100.at[i, 'frame']\n",
+    "    view = table_filenames_filtered_100.at[i, 'view_only']\n",
+    "    chamber = table_filenames_filtered_100.at[i, 'ventricle_only']\n",
+    "    instance = table_filenames_filtered_100.at[i, 'instanceidk']\n",
+    "    study = table_filenames_filtered_100.at[i, 'studyidk']\n",
     "       \n",
     "    #convert chamber to the right format\n",
     "    if chamber == 'ven':\n",
@@ -249,10 +204,9 @@
     "    try:\n",
     "        pred = np.load(pred_path)\n",
     "        pred_frame = pred[frame,:,:] # selecting only the frame with the relevant gt\n",
-    "        score = iou_courtney(gt, pred_frame)\n",
-    "        table_filenames_filtered_100_melt.at[i, 'iou_score'] = score\n",
+    "        score = calc_iou(gt, pred_frame)\n",
+    "        table_filenames_filtered_100.at[i, 'iou_score'] = score\n",
     "        print('IOU score added: {}'.format(score))\n",
-    "        \n",
     "        \n",
     "        plt.figure()\n",
     "        plt.subplot(1, 2, 1)\n",
@@ -272,11 +226,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_filenames_filtered_100_melt.iou_score = table_filenames_filtered_100_melt.iou_score.replace('', np.nan)\n",
+    "table_filenames_filtered_100.iou_score = table_filenames_filtered_100.iou_score.replace('', np.nan)\n",
     "\n",
-    "print(\"Number of files tested: {}\".format(table_filenames_filtered_100_melt.instanceidk.count()))\n",
-    "print(\"Number of files found: {}\" .format(table_filenames_filtered_100_melt.iou_score.count()))\n",
-    "print(\"Average IOU: {}\".format(round(table_filenames_filtered_100_melt.iou_score.mean(), 2)))"
+    "print(\"Number of files tested: {}\".format(table_filenames_filtered_100.instanceidk.count()))\n",
+    "print(\"Number of files found: {}\" .format(table_filenames_filtered_100.iou_score.count()))\n",
+    "print(\"Average IOU: {}\".format(round(table_filenames_filtered_100.iou_score.mean(), 2)))"
    ]
   },
   {
@@ -285,7 +239,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_filenames_filtered_100_melt"
+    "table_filenames_filtered_100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for now, write out a csv with results\n",
+    "project_dir = os.path.dirname(os.getcwd())\n",
+    "data_dir = os.path.join(project_dir, \"notebooks\", \"seg_testing\")\n",
+    "\n",
+    "if not os.path.exists(data_dir):\n",
+    "    os.makedirs(data_dir)\n",
+    "\n",
+    "time_stamp = datetime.date.today()\n",
+    "file_name = 'scappy_100_w_mdl_probs_test' + str(time_stamp) + '.txt'\n",
+    "data_path = os.path.join(data_dir, file_name)\n",
+    "\n",
+    "table_filenames_filtered_100.to_csv (data_path, index = None, header=True) "
    ]
   },
   {
